fixed prices and title alignment

--- a/_sass/components/_investment.scss
+++ b/_sass/components/_investment.scss
@@ -53,6 +53,10 @@
     font-weight: bold;
     margin-right: rem(20);
 
+    @include media($screen-medium-up) {
+      float: left;
+    }
+
     span {
       font-size: rem(12);
       float: left;
@@ -66,6 +70,10 @@
     margin-top: rem(7);
     margin-left: rem(7);
     margin-top: rem(10);
+    @include media($screen-medium-up) {
+      right: -27px;
+    }
+
     @include media($screen-tiny) {
       width: rem(25);
     }
